--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,22 @@
 
 # API Configuration
 API_BASE_URL=https://gorest.co.in/public-api/
-API_TOKEN=your_api_token_here
+BASE_URL=https://gorest.co.in/public-api/
 
-# GoRest API Token (for testing)
+# API Authentication Tokens (use any one)
+API_TOKEN=your_api_token_here
 GOREST_API_TOKEN=your_gorest_api_token_here
+BEARER_TOKEN=your_bearer_token_here
+
+# Environment Configuration
+NODE_ENV=development
+ENVIRONMENT=development
 
 # Test Configuration
 TEST_TIMEOUT=5000
 TEST_RETRIES=3
+TEST_PARALLEL=true
+TEST_MAX_CONCURRENCY=5
 
 # Database Configuration (if needed)
 DB_HOST=localhost
@@ -34,6 +42,10 @@ GRAFANA_PORT=3001
 # Logging
 LOG_LEVEL=info
 LOG_FILE=logs/app.log
+
+# Reporting
+ALLURE_RESULTS_DIR=allure-results
+ALLURE_REPORT_DIR=allure-report
 
 # Security
 JWT_SECRET=your_jwt_secret_here
